--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Inspired by the mighty coders of <a
             href="http://youngrewiredstate.org/">Young Rewired State</a>.</p>
     </div>
-    <a href="https://github.com/you"><img style="position: absolute; top: 0;
+    <a href="https://github.com/RobSpectre/NYC-Rat-Heat-Map"><img style="position: absolute; top: 0;
         right: 0; border: 0;"
         src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
         alt="Fork me on GitHub"></a>
