Adjustments on typography and descriptions.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="A heat map of rat sightings so far in 2013 in New York City." /> 
     <meta property="og:image" content="http://ratmap.brooklynhacker.com/images/screenshot.png" />
     <link href="styles/index.css" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Advent+Pro'
+    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700'
         rel='stylesheet' type='text/css'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js">
     </script>
@@ -26,6 +26,9 @@
     <div id="map-canvas"></div>
     <div id="loading">
         <div id="loader"></div>
+    </div>
+    <div id="title">
+        <h1>Rat Sightings in NYC</h1>
     </div>
     <div id="bug">
         <p>A quick hack by <a href="http://www.brooklynhacker.com">Rob
