Adjustment of page title.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Heat Map of Rat Sightings in NYC - 2010 to present</title>
+    <title>Heat Map of Rat Sightings in NYC - 2013 year-to-date</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta name="description" content="A Javascript heatmap of rat sightings in
         New York City powered by Heatmap.js, Google Maps and NYC Open Data." />
